--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Shiftify</title>
-        <script src="main.js"></script>
+        <script>
+            document.write(`<script src="main.js"></${""}script>`);
+        </script>
     </head>
     <body></body>
 </html>
