--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,7 @@
             document.write(`<script src="main.js"></${""}script>`);
         </script>
     </head>
-    <body></body>
+    <body>
+        <div id="app"></div>
+    </body>
 </html>
